--- a/port.html
+++ b/port.html
@@ -77,7 +77,7 @@
 <body>
 
   <h1 class="name">Keya Gadiya</h1>
-  <h4 class="name">(888) 8888 8888 | <a href="mailto:email@gmail.com">keyagadiya@gmail.com</a></h4>
+  <h4 class="name">(888) 8888 8888 | <a href="mailto:email@gmail.com">email@gmail.com</a></h4>
 
   <div class="left">
     <h3>Skills</h3>
